ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: go.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-backend-service
                port:
                  number: 80
